# hpc-service

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt
src/hpc_service/app/: main.py  utils.py
src/hpc_service/app/api/api_v1/: api.py
src/hpc_service/app/api/api_v1/endpoints/: jobs.py
src/hpc_service/app/core/: config.py
tests/hpc_service/app/: conftest.py  jobs_test.py
